# rez

./: .buildinfo  .coveragerc  .gitignore  .mailmap  .project  .pydevproject  .readthedocs.yaml  .sonarcloud.properties  .travis.yml  ADOPTERS.md  BUILD  CHANGELOG.md  CHANGES  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  INSTALL.md  LICENSE  MANIFEST.in  NOTICE  README  README.markdown  README.md  README.osx  RELEASE.md  SECURITY.md  THIRD_PARTY.md  WHATISTHIS  WIKI.md  appveyor.yml  build-installer.py  codecov.yml  configure.sh  configure_methodsm_python2_5_6.sh  configure_methodsm_python2_6_4.sh  configure_methodsm_python2_6_8.sh  configure_methodsm_python2_7_3.sh  (+41 more)
.appveyor/: deploy.py
.doctrees/: environment.pickle  index.doctree  one-liners.doctree
.doctrees/api/: modules.doctree  rez._sys.doctree  rez.bind.doctree  rez.cli.doctree  rez.doctree  rez.tests.doctree  rezplugins.build_system.doctree  rezplugins.doctree  rezplugins.release_hook.doctree  rezplugins.release_vcs.doctree  rezplugins.shell.doctree  rezplugins.source_retriever.doctree
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tsc_meeting_agenda.md
.github/scripts/: create_python_package.py  store_benchmark.py  validate_benchmark.py
.github/workflows/: benchmark.yaml  copyright.yaml  core.yaml  flake8.yaml  install-as-package-test.yml  installation.yaml  installation.yml  mac.yaml  mypy.yaml  pypi.yaml  release-notice.yaml  ruff.yaml  scorecard.yml  semgrep.yml  shotgun_toolkit.yaml  sonarcloud.yaml  sphinx.yaml  tests.yaml  ubuntu-16.04.yaml  ubuntu.yaml  wheel.yaml  wiki-build.yaml  wiki-publish.yaml  wiki.yaml  windows-docker-image.yaml  windows-docker-image.yaml.bak  windows-docker.yaml  windows.yaml  wintest.yaml
ASWF/: ONBOARDING.md
_modules/: index.html
_modules/rez/: build_process.html  build_system.html  exceptions.html  package_maker.html  packages.html  plugin_managers.html  release_hook.html  release_vcs.html  resolved_context.html  resolver.html  rex.html  rex_bindings.html  shells.html  solver.html  system.html  util.html
_sources/: index.rst.txt  one-liners.rst.txt
_sources/api/: rez._sys.rst.txt  rezplugins.build_system.rst.txt  rezplugins.release_hook.rst.txt  rezplugins.release_vcs.rst.txt  rezplugins.rst.txt
_static/: documentation_options.js
api/: modules.html  rez._sys.html  rez.bind.html  rez.cli.html  rez.html  rez.tests.html  rezplugins.build_system.html  rezplugins.html  rezplugins.release_hook.html  rezplugins.release_vcs.html  rezplugins.shell.html  rezplugins.source_retriever.html
bin2/: _rez_csh_complete  _rez_fwd  rez  rez-context  rez-context-info  rez-settings  rez-test  rezolve
cmake/: InstallDirs.cmake  InstallFiles.cmake  InstallPython.cmake  RezBuild.cmake  RezInstallCMake.cmake  RezInstallContext.cmake  RezInstallDoxygen.cmake  RezInstallWrappers.cmake  RezProject.cmake  Utils.cmake
docs/: BUILDING.md  Makefile  NOTES.md  README.md  build.py  conf.py  entrypoint.py  entrypoint.sh  index.rst  make.bat  one-liners.rst  one-liners.txt  requirements.txt  rez_logo.xcf  rez_sphinxext.py  useful-links.txt  user_manual.md
docs/_templates/: module.rst_t  package.rst_t
docs/api/: modules.rst  rez.bind.rst  rez.cli.rst  rez.rst  rez.tests.rst  rezplugins.shell.rst  rezplugins.source_retriever.rst
docs/source/: _configuring_rez.rst  _configuring_rez.rst.in  api.rst  basic_concepts.rst  building_packages.rst  caching.rst  changelog.md  commands_index.rst  conf.py  configuring_rez.rst  context.rst  context_bundles.rst  environment.rst  ephemerals.rst  getting_started.rst  index.rst  installation.rst  managing_packages.rst  package_commands.rst  package_definition.rst  package_orderers.rst  pip.rst  plugins.rst  releasing_packages.rst  rez_gui.rst  security.rst  suites.rst  testing_packages.rst  variants.rst  why_rez.rst
example_extensions/hello_cmd/: README.md  lib.py  setup.py
example_packages/hello_world/: CMakeCache.txt  CMakeLists.txt  README.md  build.py  build.py.example  package.py  rezbuild.py.example
examples/: README
examples/demo/: run_demo
examples/demo/projects/lolcat/1.2.3/: CMakeLists.txt  main.cpp  package.yaml
examples/demo/projects/sup_world/7.0.0/lib/: CMakeLists.txt  ghetto_greet.h
installer/: get-rez.py  packager.py  template.py
launcher/: CMakeLists.txt  LICENSE  README.md  launcher.c  remote-appended.patch  rez.patch
media/: rez_logo.xcf
python/: argparse.py
repository/: README
repository/gcc/4.8.2/: CMakeLists.txt  build.sh  package.py
repository/tbb/4.3/: CMakeLists.txt  install.py  package.py
rez/: config.py  dot.py  exceptions.py  memcached.py  packages.py  plugin_factory.py  plugin_managers.py  public_enums.py  py_dist.py  release.py  resolved_context.py  resources.py  rex.py  rezconfig  settings.py  shells.py  source_retrieval.py  system.py  util.py  versions.py
rust/: RUST.md
rust/rez_python/: Cargo.toml
rust/rez_python/src/: lib.rs
shotgun_toolkit/: rez_app_launch.py
src/: multi.yaml
template/: Doxyfile  build-env.sh  egg_remap.yaml  external_build.cmake  wrapper.sh
template/project_types/python/: CMakeLists.txt  package.yaml
template/project_types/python/TEMPLATE_CONFIG/: TEMPLATE_CONFIG.yaml  python_cmake_code
template/project_types/python/docs/: mainpage.md
template/project_types/python/python/#NAME#/: __init__.py  _common.py
template/project_types/python/python/_tokstart_NAME_tokend_/: _common.py
tests/: test.py  test_config.py  test_resolve_rex.py  test_rex.py  test_versions.py  utils.py
to_delete/: _rez_get_PATH  bootstrap.py  config.py  config_resources.py  daemonize.py  memcached.py  memcached_client.py  parse_request.py  rez-git-changelog  rez-git-print-last-tag  rez-git-print-url  rez-svn-changelog  rez-svn-print-url  settings.py  versions.py
to_delete/examples/demo/projects/translate_lib/2.1.0/: CMakeLists.txt  package.yaml
to_delete/examples/demo/projects/translate_lib/2.1.0/src/: translator.h
wiki/: README.md  generate-wiki.py  update-wiki.py  update-wiki.sh
(+1526 files in other folders)
