[package]
name = "rez"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
python-source = "src"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rez"
path = "rust/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
nom = "7.1.0"
once_cell = "1.9.0"
pyo3 = { version = "0.15.1", features = ["extension-module"] }
regex = "1.5.4"
thiserror = "1.0.30"
