[build-system]
# Building rez with mypyc (the default; set REZ_MYPYC=0 to build pure-python)
# requires our fork of mypy, which carries fixes needed to compile rez. Those
# fixes are pending upstreaming; until they land, pin the fork so that an
# isolated build (pip install ., install.py, etc.) picks up the right mypy.
#
# Local testing against a working copy of the mypy fork:
#   The pin below points at the *pushed* fork branch on GitHub, so an isolated
#   build always fetches it from the network and ignores any local mypy changes.
#   To build against a local checkout instead, either:
#     (a) recommended - install the fork editable in your venv and build with
#         --no-build-isolation, which uses that installed mypy and ignores the
#         requirement below entirely (this is what ./mypyc-custom.sh does):
#             pip install -e /path/to/mypy
#             pip install --no-build-isolation -e .
#     (b) for an isolated build, temporarily replace the requirement below with
#         a local path (revert before committing):
#             "mypy[mypyc] @ file:///path/to/mypy"
requires = ["setuptools", "mypy[mypyc] @ git+https://github.com/chadrik/mypy@rez-mypyc-fixes ; python_version >= '3.10'"]
build-backend = "setuptools.build_meta"

[tool.mypy]
# mypy 2.1 requires the type-check target to be 3.10+, so we can no longer
# target rez's lowest supported runtime (3.8). 3.10 is the closest mypy allows.
python_version = "3.10"
files = ["src/rez/", "src/rezplugins/"]
exclude = [
    '.*/rez/data/.*',
    '.*/rez/tests/.*',
    '.*/rez/utils/lint_helper.py',
]
disable_error_code = ["var-annotated", "import-not-found"]
check_untyped_defs = true
# allow this for now:
#allow_redefinition = true
follow_imports = "silent"
enable_incomplete_feature = ["InlineTypedDict"]

[[tool.mypy.overrides]]
module = "rez.vendor.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "rez.vendor.schema.schema"
ignore_errors = false

[[tool.mypy.overrides]]
module = "rez.utils.formatting"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = 'rez.utils.lint_helper'
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "rez.packages"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "rez.package_filter"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "rez.package_order"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "rez.package_repository"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "rez.package_resources"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "rez.solver"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "rez.resolved_context"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "rez.resolver"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "rez.version.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "rez.utils.resources"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "rez.utils.scope"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "rezplugins.package_repository.filesystem"
disallow_untyped_defs = true