[package]
name = "rez_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rez"
crate-type = ["cdylib"]

[dependencies]
cpython = { version = "0.7.0", features = ["extension-module"] }
rez = { path = "../rez" }
